--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
 # Core dependencies for static site (optional - no backend needed for GitHub Pages)
-# Uncomment if running a local server
-# fastapi==0.104.1
-# uvicorn==0.24.0
 python-dotenv==1.0.0
 
 # Weather data processing - NetCDF support
 xarray==2023.1.0
-netCDF4==1.6.2
+netCDF4>=1.6.4  # Changed: Use newer version with Windows wheels
 cfgrib==0.9.10.4
 
 # Data science libraries
@@ -23,10 +20,6 @@ cartopy==0.22.0
 # Data processing
 scipy==1.11.2
 joblib==1.3.2
-
-# Database and ORM (optional - not needed for static site)
-# sqlalchemy==2.0.21
-# psycopg2-binary==2.9.7
 
 # Testing
 pytest==7.4.2
