--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
-# Core dependencies for static site (optional - no backend needed for GitHub Pages)
+# Core dependencies for static site
 python-dotenv==1.0.0
 
 # Weather data processing - NetCDF support
 xarray==2023.1.0
-netCDF4>=1.6.4  # Changed: Use newer version with Windows wheels
+#netCDF4>=1.6.4  # Source compilation can be problematic; use flag --only-binary when installing
 cfgrib==0.9.10.4
 
 # Data science libraries
-numpy==1.24.3
+numpy>=1.24.3
 pandas==2.0.3
+geopandas==1.1.1
 scikit-learn==1.3.0
 matplotlib==3.7.2
 seaborn==0.12.2
