--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,27 @@
-# Core dependencies for static site
-python-dotenv==1.0.0
+# Core scientific packages
+numpy==2.2.1
+pandas==2.2.3
+matplotlib==3.9.2
+scipy==1.14.1
 
-# Weather data processing - NetCDF support
-xarray==2023.1.0
-#netCDF4>=1.6.4  # Source compilation can be problematic; use flag --only-binary when installing
-cfgrib==0.9.10.4
+# NetCDF + geospatial
+xarray==2025.1.0
+netCDF4==1.7.3
+h5netcdf==1.3.0
+h5py==3.12.1
+rasterio==1.3.10
+cartopy==0.23.0
 
-# Data science libraries
-numpy>=1.24.3
-pandas==2.0.3
-geopandas==1.1.1
-scikit-learn==1.3.0
-matplotlib==3.7.2
-seaborn==0.12.2
-plotly==5.17.0
+# Image processing
+scikit-image==0.24.0
 
-# Geospatial visualization
-cartopy==0.22.0
-
-# Data processing
-scipy==1.11.2
-joblib==1.3.2
-
-# Testing
-pytest==7.4.2
-pytest-cov==4.1.0
-httpx==0.25.0
-
-# Code quality
-black==23.9.1
-flake8==6.1.0
-mypy==1.5.1
-
-# Jupyter notebooks
-jupyter==1.0.0
-jupyterlab==4.0.6
+# Deep learning
+torch==2.5.1
+torchvision==0.20.1
 
 # Utilities
-pydantic==2.4.2
-python-multipart==0.0.6
-aiofiles==23.2.1
+tqdm==4.67.1
+
+# Notebooks
+jupyter==1.1.1
+jupyterlab==4.2.5
